2000-09-28  Francois Dechelle  <dechelle@lipari.ircam.fr>

	*  package/unixdtd/src/*: changed a little bit the implementation of
	DTD. Now, a fifo is allocated for each readsf~ object.

2000-09-25  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed with Norbert remaining bug in DTD (strange pauses in readsf~)

2000-09-23  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed SGI multi-processor related issues: fts' options are
	passed to plaform_init(argc,argv), and option --cpu=N means that
	fts will run on processor N. If this option is absent, then it will
	run on first found isolated processor. This has been used because
	if you run 2 fts on the same machine, they would both choose the same
	processor to run on.

2000-09-19  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fts/src/runtime/sched/sched.[ch]: added fts_sched_add and fts_sched_remove
	to add and remove a free running method to the scheduler loop

2000-08-01  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* packages/explode/c/src/explode.c: added MIDI file export to explode object
	* packages/sequence/c/src/seqmidi.c: added MIDI file import/export to sequence object

2000-07-12  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* packages/midisgi/c/src/sgimidiport.c: fts_midiport_t implementation for SGI
	* packages/midi/*: added package midi (ISPW like midi objects based on fts_midiport_t)

2000-06-23  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed ambiguous class name FileFilter in java/src/ircam/jmax/dialogs/MaxFileChooser.java,
	because of conflicts with JDK 1.2

	* renamed Package.java to JMaxPackage.java, because of conflict with JDK 1.2 java.lang.Package

Fri Jun  9 15:35:11 2000  Norbert Schnell  <schnell@astor.ircam.fr>

	* fts/src/runtime/midi.h: added fts_midiport abstraction to midiport.*

2000-06-07  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* packages/io/c/src/iomodule.c: fixed missing call to serial_config()