@@ -32,44 +32,69 @@
 <i>j</i>Max Release Notes</h1>
 
 <ul>
-<li>
-<a href="#2.4.14">Release notes for <i>j</i>Max 2.4.14</a></li>
-
-<li>
-<a href="#2.4.12">Release notes for <i>j</i>Max 2.4.12</a></li>
-
-<li>
-<a href="#2.4.11">Release notes for <i>j</i>Max 2.4.11</a></li>
-
-<li>
-<a href="#2.4.10">Release notes for <i>j</i>Max 2.4.10</a></li>
-
-<li>
-<a href="#2.4.5">Release notes for <i>j</i>Max 2.4.5</a></li>
-
-<li>
-<a href="#2.3.15">Release notes for <i>j</i>Max 2.3.15</a></li>
-
-<li>
-<a href="#2.3.14">Release notes for <i>j</i>Max 2.3.14</a></li>
-
-<li>
-<a href="#2.3.13">Release notes for <i>j</i>Max 2.3.13</a></li>
-
-<li>
-<a href="#2.3.12">Release notes for <i>j</i>Max 2.3.12</a></li>
-
-<li>
-<a href="#2.3.11">Release notes for <i>j</i>Max 2.3.11</a></li>
+<li><a href="#2.4.16">Release notes for <i>j</i>Max 2.4.16</a></li>
+<li><a href="#2.4.15">Release notes for <i>j</i>Max 2.4.15</a></li>
+<li><a href="#2.4.14">Release notes for <i>j</i>Max 2.4.14</a></li>
+<li><a href="#2.4.12">Release notes for <i>j</i>Max 2.4.12</a></li>
+<li><a href="#2.4.11">Release notes for <i>j</i>Max 2.4.11</a></li>
+<li><a href="#2.4.10">Release notes for <i>j</i>Max 2.4.10</a></li>
+<li><a href="#2.4.5">Release notes for <i>j</i>Max 2.4.5</a></li>
+<li><a href="#2.3.15">Release notes for <i>j</i>Max 2.3.15</a></li>
+<li><a href="#2.3.14">Release notes for <i>j</i>Max 2.3.14</a></li>
+<li><a href="#2.3.13">Release notes for <i>j</i>Max 2.3.13</a></li>
+<li><a href="#2.3.12">Release notes for <i>j</i>Max 2.3.12</a></li>
+<li><a href="#2.3.11">Release notes for <i>j</i>Max 2.3.11</a></li>
 </ul>
+
 
 <!------------------------------------------------------------------------------->
 <br>
 <hr>
 
-<a NAME="2.4.14">
- <h1> Release notes for <i>j</i>Max 2.4.14 </h1>
-</a>
+<a NAME="2.4.16"><h1> Release notes for <i>j</i>Max 2.4.16 </h1></a>
+
+
+<h3>Features</h3>
+
+<strong>
+In this release, the MIDI objects are temporarily non-available on the Linux
+platform, because of a reimplementation in progress. 
+</strong>
+
+<p>
+new MidiShare connection, via a <code>midishareport</code> objet
+
+<p>
+Hammerfall ALSA 0.6.x device:<br>
+Note: it must be compiled by hand (in packages/alsa0.6dev) and added to the
+.jmaxrc (package require alsa0.6dev)
+
+<p>
+<code>key</code> object
+
+
+<!------------------------------------------------------------------------------->
+<br>
+<hr>
+
+<a NAME="2.4.15"><h1> Release notes for <i>j</i>Max 2.4.15 </h1></a>
+
+<strong>
+In this release, the MIDI objects are temporarily non-available on the Linux
+platform, because of a reimplementation in progress.
+</strong>
+
+<h3>Features</h3>
+
+<p>
+new udpsend and udpreceive objects (see Help->I/O summary)
+
+
+<!------------------------------------------------------------------------------->
+<br>
+<hr>
+
+<a NAME="2.4.14"><h1> Release notes for <i>j</i>Max 2.4.14 </h1></a>
 
 
 <strong>
