@@ -1,3 +1,3 @@
 /* DO NOT EDIT THIS FILE: it is generated automatically */
 
-#define FTS_VERSION_STRING "jMax server version 2.4.15 "
+#define FTS_VERSION_STRING "jMax server version 2.4.16 "
