@@ -1,3 +1,8 @@
+2000-10-25  Francois Dechelle  <dechelle@lipari.ircam.fr>
+
+	* added packages/alsa0.6dev which contains the ALSA 0.6 device. Now, it works
+	only with the Hammerfall card.
+
 2000-09-28  Francois Dechelle  <dechelle@lipari.ircam.fr>
 
 	*  package/unixdtd/src/*: changed a little bit the implementation of
